tests/custom/STARIS_2022/basic/arithmetic-operators/product-type-error/stderr.expected
Error:
    product.essence:2:23:
  |
2 | such that x = product(false, true)
  |                       ^^^^^
Type error:
	Expected: "Matrix or Set"
	Got: bool

product.essence:2:30:
  |
2 | such that x = product(false, true)
  |                              ^^^^
Unexpected argument

